# minddock

./: .editorconfig  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_ZH.md  RUN.md  SECURITY.md  docker-compose.yml  environment.yml  pyproject.toml  start.bat
app/: demo.py  main.py
configs/: connectors.yaml  plugins.yaml  profiles.yaml  providers.yaml
docs/: AGENT_CONSTRAINTS.md  API_BEHAVIOR.md  APPLICATION_LAYER.md  ARCHITECTURE_OVERVIEW.md  CATALOG_MODEL.md  CHANGELOG.md  CONTRACT_SCOPE.md  DEMO_CN.md  DEMO_FLOW.md  DEMO_REHEARSAL_CN.md  EVALUATION.md  Extension_Guide_扩展开发指南_v1.1.md  FINAL_DEMO_SCRIPT.md  FINAL_VALIDATION_V3.md  FINAL_VALIDATION_V4.md  HLD_总体设计说明书_v1.0.md  INCREMENTAL_DEMO.md  INGEST_PIPELINE.md  RESPONSE_MODEL.md  RETRIEVAL_MODEL.md  ROADMAP.md  RUNTIME_MODEL.md  SERVICE_MODEL.md  SKILL_CONTRACT.md  SKILL_DEVELOPMENT.md  SKILL_MODEL.md  SOURCE_MODEL.md  SRS_个人知识管理助手_v1.0.md  STATUS.md  TEST_PLAN.md  api_contracts.md  demo-guide.md  demo_talking_points.md  llm_platform.md  runtime_phase2.md  runtime_phase2_5.md  runtime_phase3.md  stage3_technical_summary.md  stage_report_notes.md  thesis-alignment.md
domain/: __init__.py  models.py
eval/: chunking_eval_report_v4.md  chunking_eval_report_v5.md  eval_cases_front_matter.json  eval_cases_front_matter_multi.json  eval_cases_v3.json
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
knowledge_base/: api_usage.md  architecture.md  example.md  rag_pipeline.md
ports/: __init__.py  connectors.py  llm.py  parsers.py  plugins.py  vector_store.py
(+201 files in other folders)
